Implement load screenshot from server in period 10 ms time

--- a/src/app/portal/main.component.html
+++ b/src/app/portal/main.component.html
@@ -1,5 +1,8 @@
 <p>main works!</p>
+<button (click)="runLoad()">Załaduj</button>
+<button (click)="isRunScreens=false">Wyłącz</button>
 
 <img [src]="imageToShow"
      alt="Place image title">
+
 
