Attach isImageLoading options

--- a/src/app/portal/main.component.html
+++ b/src/app/portal/main.component.html
@@ -1,7 +1,8 @@
-<p>main works!</p>
 <input (focusout)="inputValue($event)" placeholder="Podaj opóźnienie">
 <button (click)="runLoad()">Załaduj</button>
 <button (click)="disableServer()">Wyłącz</button>
 
 <img class="img-fluid" [src]="imageToShow"
-     alt="Place image title">
+     alt="Place image title"
+     *ngIf="isImageLoading">
+
